src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/warnings.warnings
/errors/warnings.tessla(5,5 - 5,7): Conflicting out declaration (previous declaration at /errors/warnings.tessla(4,5 - 4,7))
/errors/warnings.tessla(7,10 - 7,11): Conflicting out declaration (previous declaration at /errors/warnings.tessla(6,10 - 6,11))
/errors/warnings.tessla(11,5 - 11,11): The keyword 'return' is deprecated